Kubernetes/03_Ingress/ingress_resource_path_based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: k8s-ingress-path-based
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec: 
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /nginx(/|$)(.*)
          pathType: Prefix 
          backend: 
            service: 
              name: nginx
              port: 
                number: 80
        - path: /httpd(/|$)(.*)
          pathType: Prefix 
          backend: 
            service: 
              name: httpd
              port: 
                number: 80
        - path: /(.*)
          pathType: Prefix 
          backend: 
            service: 
              name: nginx
              port: 
                number: 80
